# Vital-quickstart-PPC

backend/python/: Dockerfile  build.sh  pyproject.toml  requirements.txt  start.sh
frontend/components/dashboard/: AverageVelocityGraph.tsx  TrainingPanel.tsx  TrainingVolumeGraph.tsx
frontend/lib/: client.tsx
frontend/pages/: index.tsx
